vlib/v/checker/tests/main_args_err.vv
fn main(a string) {
	println(a)
}
